k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartshop-api
  labels:
    app: smartshop-api
spec:
  type: LoadBalancer
  selector:
    app: smartshop-api
  ports:
    - name: http
      port: 80
      targetPort: http
